--- a/package.json
+++ b/package.json
@@ -3,35 +3,35 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
+    "start": "vite preview",
     "lint": "eslint src/**/*.{ts,tsx}"
   },
   "dependencies": {
-    "framer-motion": "^3.10.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "framer-motion": "^6.3.11",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.2.5",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "postcss": "^8.2.10",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "postcss": "^8.4.14",
     "postcss-100vh-fix": "^1.0.2",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.3",
-    "vite": "^2.0.5"
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.1.2",
+    "typescript": "^4.7.3",
+    "vite": "^2.9.12"
   }
 }
